fix: spacing

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,11 +1,12 @@
 html, body {
   width: 100%;
   height: 100%;
+  margin: 0;
+  background: url('./images/bg.png');
+  background-position: center center;
 }
 
 #root {
-  background: url('./images/bg.png');
-  background-position: center center;
   width: 100%;
   height: 100%;
   margin: 0;
@@ -21,8 +22,6 @@ html, body {
 .content {
   display: flex;
   justify-content: space-around;
-  width: 100%;
-  height: 100%;
 }
 
 .action {
